src/App.css
body {
    margin: 0;
    /* font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

html,
body,
#root {
    font-family: 'Inter', 'Roboto', Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji', 'Segoe UI Emoji',
        'Segoe UI Symbol';
    height: 100%;
}

body {
    background-color: white;
}

.panel-title {
    font-size: 14px;
    font-weight: bold;
}

.panel-title > small {
    font-size: 12px;
    margin-left: 6px;
}

.config-panel {
    visibility: hidden;
    background-color: #f6f6f6;
    border-right: 1px solid lightgray;
    padding: 20px;
    height: calc(100% - 40px);
    position: fixed;
    z-index: 999;
}

.config-panel-section-title {
    font-size: 14px;
    margin-top: 20px;
    font-weight: bold;
}

.config-panel-input-container {
    margin-top: 18px;
    width: 100%;
}

.config-panel-label {
    /* label on the left of HTML elements */
    font-size: 14px;
    height: 30px;
    line-height: 30px;
    width: 40%;
    display: inline-block;
}

.config-panel-label > small {
    margin-left: 4px;
    font-size: 10px;
    font-weight: bold;
}

.config-panel-input {
    width: 60%;
    display: inline-block;
}

.config-panel-dropdown {
    font-size: 14px;
    height: 30px;
    width: 100%;
}

.nav-dropdown {
    font-size: 14px;
    width: 150px;
    height: 30px;
    border-radius: 0px;
    border: 1px solid grey;
    position: absolute;
    left: 3px;
}

.nav-dropdown:focus {
    border-radius: 0px;
}

.zoom-in-button,
.zoom-out-button,
.zoom-left-button,
.zoom-right-button {
    cursor: pointer;
    position: absolute;
    font-size: 14px;
    height: 30px;
    width: 30px;
    margin-left: 20px;
    padding: 0px;
    /* padding-left: 10px;
    padding-right: 10px; */
    line-height: 30px;
    border: 1px solid lightgrey;
}
.zoom-in-button {
    left: 380px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.zoom-out-button {
    left: 410px;
    line-height: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.zoom-left-button {
    left: 455px;
    line-height: 10px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.zoom-right-button {
    left: 485px;
    line-height: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.zoom-in-button:hover,
.zoom-out-button:hover,
.zoom-left-button:hover,
.zoom-right-button:hover {
    background: lightgrey;
}

.gene-search {
    position: absolute;
    font-size: 14px;
    left: 158px;
    height: 28px;
    width: 160px;
    /* border-radius: 10px; */
    margin-left: 20px;
    padding-left: 29px;
    padding-right: 10px;
    padding-top: 0px;
    padding-bottom: 0px;
    line-height: 30px;
    border: 1px solid grey;
}

.gene-search-icon {
    margin-top: 1px;
    margin-left: 22px;
    width: 16px;
    height: 16px;
    position: absolute;
    left: 164px;
    cursor: pointer;
    z-index: 999;
    fill: grey;
}

.config-panel-search-box {
    font-size: 14px;
    height: calc(30px - 6px);
    width: calc(100% - 24px);
    padding: 3px 12px;
}

.config-panel-button {
    font-size: 14px;
    margin-top: 20px;
    height: 30px;
    width: 100%;
    text-align: center;
    line-height: 30px;
    border: 1px solid black;
    border-radius: 3px;
    background: white;
    cursor: pointer;
}

.config-panel-button:hover {
    box-shadow: 0px 0px 4px #00000066;
}

.vis-panel {
    height: 100%;
    width: 100%;
}

.title-btn {
    font-size: 14px;
    margin-left: 10px;
    text-align: center;
    line-height: 30px;
    position: absolute;
    width: 20px;
    height: 20px;
    cursor: pointer;
    z-index: 999;
    color: #333333;
}

.tag-parent {
    margin: 4px;
    max-width: 200px;
    margin: auto;
    margin-bottom: 10px;
}

.tag-note {
    padding: 4px;
    margin-top: 6px;
    background-color: rgb(239, 239, 239);
    border-radius: 10px;
    color: grey;
}

.thumbnail-generate-button {
    margin-left: 20px;
    line-height: 30px;
    border-radius: 0px;
    border: 1px solid grey;
    cursor: pointer;
}

.thumbnail-loading-message {
    position: absolute;
    left: 0px;
    top: calc(50% - 12px);
    width: 100%;
    font-weight: bold;
    color: darkgrey;
}

.tag-assembly {
    position: absolute;
    color: rgb(195, 195, 195);
    font-weight: bold;
    font-size: small;
    bottom: 14px;
    right: calc(50% - 95px);
}

.tag-ra,
.tag-id,
.tag-pm,
.tag-sv,
.tag-disabled {
    /* border-radius: 4px; */
    padding: 2px;
    /* margin: 2px; */
    border: 1px solid rgb(234, 234, 234);
    font-weight: bold;
}

.tag-disabled {
    color: lightgrey;
}

.tag-sv {
    color: #3275b4;
}

.tag-ra {
    color: #d6641e;
    /* color: white; */
}

.tag-id {
    color: #cc7daa;
    /* color: black; */
}

.tag-pm {
    color: #e6a01b;
    /* color: black; */
}

.config-button {
    width: 25px;
    height: 25px;
    position: absolute;
    top: 10px;
    left: 10px;
    cursor: pointer;
    z-index: 999;
}

.jump-to-bp-btn {
    font-weight: bold;
    color: black;
    background-color: lightgrey;
    box-shadow: 0 0 10px 0px #00000032;
    border: 2px solid grey;
    border-radius: 4px;
    cursor: pointer;
    z-index: 998;
    opacity: 0.5;
}

.jump-to-bp-btn:hover {
    opacity: 1;
}

.move-to-top-btn {
    width: 30px;
    height: 30px;
    color: #a9a9a9;
    position: absolute;
    box-shadow: 0 0 10px 0px #00000032;
    bottom: 20px;
    right: 20px;
    cursor: pointer;
    z-index: 998;
    opacity: 0.5;
}

.move-to-top-btn:hover {
    opacity: 1;
}

.interaction-toggle-button {
    z-index: 999;
    cursor: pointer;
    position: absolute;
    top: 0px;
    right: 0px;
}

.interaction-toggle-button-label {
    line-height: 30px;
}

.sample-text-box {
    margin-left: 20px;
    line-height: 20px;
}

.sample-label {
    position: absolute;
    top: 12px;
    left: 50px;
    text-shadow: 0px 0px 6px white;
    font-size: 18px;
    z-index: 999;
    background: #ffffff99;
}

.help-label {
    position: absolute;
    top: 12px;
    right: 20px;
    text-shadow: 0px 0px 6px white;
    z-index: 999;
    color: gray;
    background: #ffffff99;
}

.vis-overview-panel {
    position: absolute;
    width: 100%;
    height: 100%;
    border-right: 1px solid lightgray;
    background-color: white;
    /* box-shadow: 0px 0px 12px #00000032; */
    overflow-y: none;
    z-index: 999;
    left: 0px;
    transition: left 0.2s ease;
}

.hide {
    left: -100%;
}

.vis-overview-panel .gosling-component {
    cursor: pointer;
    pointer-events: none;
}

.vis-overview-panel .title {
    height: 30px;
    padding: 10px;
    font-size: 18px;
    border-bottom: 1px solid lightgray;
    background: #f6f6f6;
}

.vis-overview-panel .title small {
    font-weight: normal;
}

.vis-overview-panel .button {
    width: 30px;
    height: 30px;
    cursor: pointer;
    position: absolute;
    right: 5px;
    top: 12px;
}

.vis-overview-panel .config {
    min-height: 100px;
    background: #f6f6f6;
    border-top: 1px solid lightgray;
    position: relative;
    padding: 30px;
}

.vis-overview-panel .config .button {
    font-size: 14px;
    height: 30px;
    width: calc(100% - 20px);
    text-align: center;
    line-height: 30px;
    border: 1px solid black;
    border-radius: 3px;
    background: white;
    cursor: pointer;
    left: 10px;
}

.vis-overview-panel .overview-container {
    display: flex;
    flex-wrap: wrap;
    height: calc(100% - 40px);
    padding: 20px;
    gap: 20px;
    overflow-y: auto;
}

.overview-root {
    gap: 0px;
    height: calc(100% - 50px);
}

.overview-container {
    width: calc(100% - 400px - 40px);
    float: left;
}

.overview-left {
    float: left;
    height: 100%;
    width: 399px;
    border-right: 1px solid lightgrey;
    overflow-y: auto;
}

.vis-overview-panel table {
    width: 100%;
    border-spacing: 0px 0px;
    border-collapse: collapse;
}

.vis-overview-panel tr /* :nth-child(even) */ {
    border-top: 1px solid lightgray;
}

.vis-overview-panel td {
    border-radius: 0px;
    padding-left: 90px !important;
}

.vis-overview-panel .overview-title {
    position: absolute;
    left: -10px;
    top: 120px;
    transform: rotate(-90deg);
    font-weight: bold;
    font-size: 18px;
    text-shadow: 0px 0px 12px #f6f6f6;
}

.overview-container > div {
    padding: 4px;
}

.vis-overview-panel .selected-overview,
.vis-overview-panel .unselected-overview {
    display: block;
    text-align: center;
    flex: 1;
}

.vis-overview-panel .selected-overview {
    box-shadow: inset 0px 0px 0px 2px #2e94ff;
}

.vis-overview-panel .unselected-overview {
    cursor: pointer;
}

.vis-overview-panel .unselected-overview:hover {
    box-shadow: inset 0px 0px 0px 2px lightgray;
}

.vis-overview-panel td {
    padding: 20px;
}

.gosling-panel {
    /* http://iros.github.io/patternfills/sample_d3.html */
    background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc1JyBoZWlnaHQ9JzUnPgo8cmVjdCB3aWR0aD0nNScgaGVpZ2h0PSc1JyBmaWxsPScjZmZmJy8+CjxyZWN0IHdpZHRoPScxJyBoZWlnaHQ9JzEnIGZpbGw9JyNjY2MnLz4KPC9zdmc+');
    background-repeat: repeat;
    overflow-y: auto;
    display: grid;
}

.gosling-panel > div {
    grid-area: 1 / 1;
}

.vis-panel-title {
    position: fixed;
    bottom: 20px;
    right: 20px;
    opacity: 30%;
}

.vis-panel-overlay {
    position: fixed;
    right: 0;
    top: 0;
    height: 100%;
    /* box-shadow: inset 0px 0px 0px 2px gray; */
    /* background-color: #7AADED00; */
    cursor: grab;
}

.vis-panel-overlay:hover {
    box-shadow: inset 0px 0px 0px 2px #7aaded;
    background-color: #7aaded22;
}

.vis-panel-overlay-active {
    box-shadow: inset 0px 0px 0px 2px #7aaded;
    pointer-events: none;
}

.vis-panel-overlay > span {
    opacity: 0;
    background-color: gray;
    font-weight: bold;
    color: white;
    line-height: 10px;
    position: fixed;
    top: 0;
    padding: 10px;
}

.vis-panel-overlay:hover > span {
    opacity: 1;
    background-color: #7aaded;
}

